# clevis

./: Cargo.toml  License  README.md
src/: app.rs  args.rs  command.rs  commander.rs  executor.rs  lib.rs  log.rs  main.rs  render.rs  shape.rs
src/command/: delete.rs  draw_shape.rs  move_by.rs  undo_redo.rs
src/commander/: cli_commander.rs
src/commander/cli_commander/: parse_cmd.rs
src/render/: dummy_renderer.rs  file_renderer.rs  html_renderer.rs  screen_template.html
