[package]
name = "clevis"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5"
lazy_static = "1.4.0"
env_logger = "0.9.0"
log = "0.4.17"
clap = { version = "3.2.21", features = ["derive"] }
